--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -82,13 +82,7 @@
       "Collecting zipp>=0.5 (from importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.0.18->fastai)\n",
       "  Downloading https://files.pythonhosted.org/packages/74/3d/1ee25a26411ba0401b43c6376d2316a71addcc72ef8690b101b4ea56d76a/zipp-0.6.0-py2.py3-none-any.whl\n",
       "Requirement already satisfied: more-itertools in /anaconda3/lib/python3.7/site-packages (from zipp>=0.5->importlib-metadata>=0.20; python_version < \"3.8\"->catalogue<1.1.0,>=0.0.7->spacy>=2.0.18->fastai) (6.0.0)\n",
-      "Building wheels for collected packages: nvidia-ml-py3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Building wheels for collected packages: nvidia-ml-py3\n",
       "  Building wheel for nvidia-ml-py3 (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25h  Stored in directory: /Users/augustinechang/Library/Caches/pip/wheels/e4/1d/06/640c93f5270d67d0247f30be91f232700d19023f9e66d735c7\n",
       "Successfully built nvidia-ml-py3\n",
@@ -128,16 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv(path + 'train.csv')"
+    "train = pd.read_csv(path + 'train.csv')\n",
+    "test = pd.read_csv(path + 'test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -229,13 +224,103 @@
        "4       1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Just happened a terrible car crash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Heard about #earthquake is different cities, s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>there is a forest fire at spot pond, geese are...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Apocalypse lighting. #Spokane #wildfires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Typhoon Soudelor kills 28 in China and Taiwan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id keyword location                                               text\n",
+       "0   0     NaN      NaN                 Just happened a terrible car crash\n",
+       "1   2     NaN      NaN  Heard about #earthquake is different cities, s...\n",
+       "2   3     NaN      NaN  there is a forest fire at spot pond, geese are...\n",
+       "3   9     NaN      NaN           Apocalypse lighting. #Spokane #wildfires\n",
+       "4  11     NaN      NaN      Typhoon Soudelor kills 28 in China and Taiwan"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
    ]
   },
   {
@@ -345,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +444,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,19 +455,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id        0\n",
-       "text      0\n",
-       "target    0\n",
+       "id             0\n",
+       "keyword       61\n",
+       "location    2533\n",
+       "text           0\n",
+       "target         0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +489,7 @@
        "(7613, 5)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +511,7 @@
        "Name: target, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,16 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2cb16860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a2856cb70>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -464,6 +551,57 @@
    "source": [
     "train['target'].value_counts().plot(kind='bar')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting bert-text\n",
+      "  Downloading https://files.pythonhosted.org/packages/0e/90/271a67bfa4940c5a7d763a5e2091076d476da6dcd2af89c38847b5933f5b/bert_text-0.1.0-py3-none-any.whl\n",
+      "Collecting tensorflow-gpu (from bert-text)\n",
+      "\u001b[31m  Could not find a version that satisfies the requirement tensorflow-gpu (from bert-text) (from versions: )\u001b[0m\n",
+      "\u001b[31mNo matching distribution found for tensorflow-gpu (from bert-text)\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install bert-text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
